--- a/stylesheetnote.css
+++ b/stylesheetnote.css
@@ -1,6 +1,6 @@
 body {
-    background-color: #dcdcdc
+    background-color: #808080;
 }
 .textcontents {
-    color: #000080
+    color: #000080;
 }
